@@ -23,18 +23,17 @@ module DiffHelper
   end
 
   def diff_options
-    options = { ignore_whitespace_change: hide_whitespace?, no_collapse: expand_all_diffs? }
+    options = SafeDiffs.default_options.merge(
+      ignore_whitespace_change: hide_whitespace?,
+      no_collapse: expand_all_diffs?
+    )
 
     if action_name == 'diff_for_path'
       options[:no_collapse] = true
       options[:paths] = params.values_at(:old_path, :new_path)
     end
 
-    Commit.max_diff_options.merge(options)
-  end
-
-  def safe_diff_files(diffs, diff_refs: nil, repository: nil)
-    diffs.decorate! { |diff| Gitlab::Diff::File.new(diff, diff_refs: diff_refs, repository: repository) }
+    options
   end
 
   def unfold_bottom_class(bottom)
