@@ -1,0 +1,5 @@
+module SafeDiffs
+  def self.default_options
+    ::Commit.max_diff_options.merge(ignore_whitespace_change: false, no_collapse: false)
+  end
+end
